--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.8.0",
     "pako": "^2.1.0",
+    "pdfjs-dist": "^3.11.174",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "prop-types": "^15.8.1"
+    "react-pdf": "^9.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
